# SigLight

./: .gitignore  CMakeLists.txt  README.md  build_external_libraries.py  build_x86.bat  conanfile.txt
CSV/: plot.py  plot_av.py  plot_cb.py  plot_gaussian.py  plot_kernel.py  plot_novelty.py
lightshow-visualization/: fixture.py  main.py  utils.py
lightshow-visualization/C++/: CMakeLists.txt
lightshow-visualization/C++/src/: CMakeLists.txt  lightshow_window.cpp  lightshow_window.h  main.cpp
lightshow-visualization/C++/src/resources/: styles.qss
lightshow-visualization/C++/src/tinyxml2/: CMakeLists.txt
src/core/: CMakeLists.txt  analysis_only.cpp  crash_demo.cpp  lame_test.cpp  main.cpp  main_dmx_device.cpp  onset_test.cpp  portaudio_example.cpp  portaudio_example__.cpp  song_player.cpp
src/core/lib/: CMakeLists.txt  dmx_device.cpp  dmx_device.h  dmx_device_eurolite_pro.cpp  dmx_device_eurolite_pro.h  dmx_device_k_8062.cpp  dmx_device_k_8062.h  file_system_utils.h  logger.cpp  logger.h  song.cpp  song.h  song_player.cpp  song_player.h  song_player_factory.cpp  song_player_factory.h  stacktrace_registration.cpp  stacktrace_registration.h  version.cpp  version.h
src/core/lib/lightshow/: CMakeLists.txt  analysis.cpp  analysis.h  analysis_result.cpp  analysis_result.h  box_fir.h  channel.cpp  channel.h  edit_result.cpp  edit_result.h  generated_light_show.cpp  generated_light_show.h  light_show_analyser.cpp  light_show_analyser.h  light_show_combiner.cpp  light_show_combiner.h  light_show_registry.cpp  light_show_registry.h  lightshow.cpp  lightshow.h  lightshow_fixture.cpp  lightshow_fixture.h  value_change.cpp  value_change.h
src/core/mp3_to_wav/: CMakeLists.txt  mp3_to_wav_exec.cpp  mp_3_to_wav_converter.cpp  mp_3_to_wav_converter.h
src/core/portaudio_song_player/: CMakeLists.txt  port_audio_song_player.cpp  port_audio_song_player.h
src/core/qt_song_player/: CMakeLists.txt  q_media_song_player.cpp  q_media_song_player.h
src/core/song_tag_utils/: CMakeLists.txt  song_info.cpp  song_info_copy.cpp  song_info_utils.cpp  song_info_utils.h
src/ui/: CMakeLists.txt  change_fixtures.cpp  change_fixtures.h  change_fixtures.ui  createfixturedialog.cpp  createfixturedialog.h  createfixturedialog.ui  custom_segments_dialog.cpp  custom_segments_dialog.h  custom_segments_dialog.ui  dmx_test.cpp  edit_fixture_dialog.cpp  edit_fixture_dialog.h  edit_fixture_dialog.ui  file_system_utils_qt.cpp  file_system_utils_qt.h  fixturechoosingdialog.cpp  fixturechoosingdialog.h  fixturechoosingdialog.ui  lightshow_generator.cpp  lightshow_generator.h  lightshow_per_fixture.cpp  lightshow_per_fixture.h  lightshow_player.cpp  lightshow_player.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  volume_button.cpp  volume_button.h
src/ui/fixturemanager/: CMakeLists.txt  channel_gui.cpp  channel_gui.h  fixture.cpp  fixture.h  function.cpp  function.h  universe.cpp  universe.h
src/ui/player_edit_view/: CMakeLists.txt  change_lightshow_dialog.cpp  change_lightshow_dialog.h  change_lightshow_dialog.ui  header_mult_tracks.cpp  header_mult_tracks.h  lightshow_fixture_properties.cpp  lightshow_fixture_properties.h  multiple_tracks.cpp  multiple_tracks.h  music_slider.cpp  music_slider.h  player_edit_view.cpp  player_edit_view.h  song_label.cpp  song_label.h  standard_lightshow.cpp  standard_lightshow.h
src/ui/playlist_and_player/: CMakeLists.txt  music_player.cpp  music_player.h  playlist.cpp  playlist.h  playlist_item.cpp  playlist_item.h
src/ui/playlist_view/: CMakeLists.txt  not_editable_delegate.h  playlist_view.cpp  playlist_view.h  playlistviewmodel.cpp  playlistviewmodel.h  playlistviewstyle.cpp  playlistviewstyle.h
src/ui/resources/: resources.qrc
src/ui/resources/stylesheet/: style.qss
